Thu Aug 27 22:31:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Fixed minor bug in TIME_BASED_FILTER implementation; instance_ptr
          assignment should occur prior to filter_instance call.

        * bin/dcps_tests.lst:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/Qos_Helper.h:
        * dds/DCPS/Qos_Helper.inl:
        * tests/DCPS/TimeBasedFilter:
        * tests/DCPS/TimeBasedFilter/TimeBasedFilter.mpc:
        * tests/DCPS/TimeBasedFilter/main.cpp:
        * tests/DCPS/TimeBasedFilter/run_test.pl:
        * tests/DCPS/TimeBasedFilter/tcp.conf:

          Added new test for TIME_BASED_FILTER QoS policies.

Thu Aug 27 19:02:33 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:

          Fixed annoying GCC 4.3.x warning; apparently GCC doesn't expect
          anyone to have a proper grasp of order of operations.

Thu Aug 27 17:56:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:

          Updated coherent_samples to use a known integer size (ACE_UINT32);
          this fixes problems on hosts (i.e. Mac OS X) which define differing
          std::size_t sizes.

Wed Aug 26 23:05:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/RakeResults_T.h:
        * dds/DCPS/RakeResults_T.cpp:

          Updated ordered_access support to make better use of existing
          primitives offered by QueryCondition.

Wed Aug 26 21:16:21 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/RakeResults_T.h:
        * dds/DCPS/RakeResults_T.cpp:

          Updates to RakeResults to better handle PRESENTATION
          access_scope.

Wed Aug 26 18:09:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/RakeResults_T.cpp:
